teams and sentiments collect and CRUD
